--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laravel/cashier": "^15.4",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9",    
-        "laravel/nova": "^4.0"
+        "laravel/nova": "^4.0",
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
