--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         }
     },
     "config": {
+        "auth": "auth.json",
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
